GNOME Bugzilla – Bug 722925
help buttons don't work
Last modified: 2014-02-09 11:17:36 UTC
The help buttons don't work in the Personalize (scripting) dialogs. git master
Created attachment 268557 [details] [review] script editor: help buttons don't work
Fixed removing the help buttons, they can be added again when there will be an help page for the script editor. The following fix has been pushed: 8a8fc7f script editor: help buttons don't work
Created attachment 268563 [details] [review] script editor: help buttons don't work