script editor: help buttons don't work

https://bugzilla.gnome.org/show_bug.cgi?id=722925